--- a/package.json
+++ b/package.json
@@ -37,22 +37,27 @@
   "devDependencies": {
     "@changesets/changelog-git": "^0.2.0",
     "@changesets/cli": "^2.27.1",
+    "@eslint/js": "^9.11.1",
     "@finsweet/eslint-config": "^2.0.7",
     "@finsweet/tsconfig": "^1.3.4",
-    "@playwright/test": "^1.42.1",
+    "@playwright/test": "^1.47.2",
+    "@types/node": "^22.6.1",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "cross-env": "^7.0.3",
-    "esbuild": "^0.20.1",
-    "eslint": "^8.57.0",
+    "esbuild": "0.20.2",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
-    "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
+    "globals": "^15.9.0",
+    "prettier": "3.3.3",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@finsweet/ts-utils": "^0.40.0"
+    "@finsweet/ts-utils": "^0.40.0",
+    "gsap": "^3.12.5",
+    "split-type": "^0.3.4"
   },
   "engines": {
     "pnpm": ">=9"
