--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.25.1",
     "@finsweet/ts-utils": "^0.40.0",
     "gsap": "^3.12.5",
     "split-type": "^0.3.4"
   },
+  
   "engines": {
     "pnpm": ">=9"
   }
