--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "@babel/eslint-parser": "^7.25.1",
     "@finsweet/ts-utils": "^0.40.0",
     "gsap": "^3.12.5",
+    "lenis": "^1.1.13",
     "split-type": "^0.3.4"
   },
-  
   "engines": {
     "pnpm": ">=9"
   }
