--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.25.1",
+    "@barba/core": "^2.10.3",
     "@finsweet/ts-utils": "^0.40.0",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
