--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/finsweet/developer-starter/issues"
   },
   "type": "module",
-  "main": "src/index.ts",
+  "main": "src/index.ts, src/script.js",
   "module": "src/index.ts",
   "files": [
     "dist"
